cli: fix: pipe; add: query support;;

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
-#### joe made this: http://goel.io/joe
-### Operating Systems ###
-# Darwin
 .DS_Store
+._*
 
 #### go ####
+# If you prefer the allow list template instead of the deny list, see community template:
+# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
+#
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -19,4 +20,8 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+# Go workspace file
+go.work
+
 
